Bug 1536747 - [Linux] PictureInPicture window - open window manager menu on right mouse click, r=jhorak

This patch depends on Bug 1584492.

Differential Revision: https://phabricator.services.mozilla.com/D47424